Stop image from stretching card vertically.

--- a/sass/card.sass
+++ b/sass/card.sass
@@ -8,7 +8,6 @@
   display: flex
   align-items: stretch
   transition: filter 0.2s
-  max-height: 480px
 
   &:focus-within
     outline: 2px solid var(--accent1)
@@ -28,17 +27,18 @@
   position: relative
   overflow: hidden
 
+
   img
     width: 100%
-    height: 100%
+    min-height: 100%
     object-fit: cover
+    display: block
 
   @media (max-width: 700px)
     flex-basis: 300px
 
 
 .card-text-container
-  flex-basis: 500px
   flex-grow: 1
   padding: 1rem
   position: relative
